# src/main/java/com/example/bankcards/controller/AuthController.java
@@ -1,0 +1,34 @@
+package com.example.bankcards.controller;
+
+import com.example.bankcards.dto.JwtResponse;
+import com.example.bankcards.dto.LoginRequest;
+import com.example.bankcards.service.AuthService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/api/v1/auth")
+@Tag(name = "Authentication Controller", description = "User authentication and JWT generation")
+public class AuthController {
+
+    private final AuthService authService;
+
+    @Autowired
+    public AuthController(AuthService authService) {
+        this.authService = authService;
+    }
+
+    @Operation(summary = "User login", description = "Authenticates user and returns a JWT token")
+    @PostMapping("/login")
+    public ResponseEntity<JwtResponse> authenticateUser(@Valid @RequestBody LoginRequest loginRequest) {
+        JwtResponse jwtResponse = authService.authenticateUserAndGenerateToken(loginRequest);
+        return ResponseEntity.ok(jwtResponse);
+    }
+}
