# src/main/java/com/example/bankcards/controller/TransactionController.java
@@ -1,15 +1,18 @@
 package com.example.bankcards.controller;
 
 import com.example.bankcards.dto.TransactionDTO;
+import com.example.bankcards.security.SecurityUtils;
 import com.example.bankcards.service.TransactionManager;
 import com.example.bankcards.service.impl.TransactionService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.core.Authentication;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
@@ -32,10 +35,11 @@ public class TransactionController {
         return transactionManager.findById(id);
     }
 
-    @Operation(summary = "Find all transactions for a user", description = "Retrieves a list of all transactions for a specific user")
-    @GetMapping("/user/{userId}")
-    public Page<TransactionDTO> findTransactionsForUser(@NotNull @PathVariable Long userId, Pageable pageable) {
-        return transactionManager.findAll(pageable);
+    @Operation(summary = "Find all transactions for the authenticated user", description = "Retrieves a list of all transactions for the authenticated user")
+    @GetMapping("/me")
+    public Page<TransactionDTO> findTransactionsForUser(Authentication authentication, Pageable pageable) {
+        Long userId = SecurityUtils.getCurrentUserId(authentication);
+        return transactionManager.findByUserId(userId, pageable);
     }
 
     @Operation(summary = "Find all transactions for a card", description = "Retrieves a list of all transactions for a specific card")
@@ -47,13 +51,13 @@ public class TransactionController {
     @Operation(summary = "Create a new transaction", description = "Creates a new transaction for a specific card")
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
-    public TransactionDTO createTransaction(@NotNull @Validated TransactionDTO transactionDTO) {
+    public TransactionDTO createTransaction(@Valid @RequestBody TransactionDTO transactionDTO) {
         return transactionManager.create(transactionDTO);
     }
 
     @Operation(summary = "Update an existing transaction", description = "Updates an existing transaction by its ID")
-    @PutMapping
-    public TransactionDTO updateTransaction(@NotNull Long id, @NotNull TransactionDTO transactionDTO) {
+    @PutMapping("/{id}")
+    public TransactionDTO updateTransaction(@NotNull @PathVariable Long id, @Valid @RequestBody TransactionDTO transactionDTO) {
         return transactionManager.update(id, transactionDTO);
     }
 
